--- a/analyzeApplyExtend/analyze/css/styles07.css
+++ b/analyzeApplyExtend/analyze/css/styles07.css
@@ -1,11 +1,11 @@
 /*
-Author:
-Date:
-File Name: 
+Author: Christian Morgan
+Date:10/27/22
+File Name: Styles07
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, h1, h3, div {
+body, header, nav, main, footer, h1, h3, div, section, article, aside{
     margin: 0;
     padding: 0;
     border: 0;
@@ -46,6 +46,7 @@ nav li a {
 /* Style rules for main content  */
 main {
 	padding: 1em;
+
 }
 
 main h1 {
@@ -57,6 +58,11 @@ main h1 {
 section {
     color: #fff;
     padding: 3%;
+    background-color: #9d4502;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 0%;
+    margin-left: 0;
 }
 
 article {
@@ -73,6 +79,8 @@ aside {
     font-style: italic;
     text-align: center;
     border-radius: 15px;
+    text-shadow: 4px 4px 8px #fc7307;
+    box-shadow: 4px 4px 10px #183440;
 }
 
 footer {
@@ -82,6 +90,14 @@ footer {
 
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 700px), print {
-    
-    
+  .grid{
+    display: grid;
+    grid-template-columns: 333px 333px 333px;
+    grid-gap: 20px;
+
+  }
+
+aside{
+  grid-column:1 / span 3;
+}
 }
