--- a/analyzeApplyExtend/extend/css/styles07.css
+++ b/analyzeApplyExtend/extend/css/styles07.css
@@ -31,9 +31,9 @@ main {
 	background-color: #fff;
 }
 
-.column {
-  float: right;
-  width: 33.33%;
+.column{
+  column-count: 3;
+  column-rule: solid #628c45;
 }
 
 
